test-suite/tests/ui/states/invalid/pointless_reject_delete.stderr
error: rejected state doesn't need to be deleted
 --> tests/ui/states/invalid/pointless_reject_delete.rs:8:32
  |
8 |     #[stated(reject(A), delete(A))]
  |                                ^
